Convert tag base URL to allow to embed groovy expressions.